[package]
name = "actix-web-thiserror-derive"
version = "0.1.1"
authors = ["enzi <enzi@braindead.io>"]
description = "Implementation of #[derive(ResponseError)]"
edition = "2021"
license = "MIT"
repository = "https://github.com/enzious/actix-web-thiserror"
include = ["/src", "/README.md", "/LICENSE.md", "/crates-io.md"]
readme = "crates-io.md"
documentation = "https://docs.rs/actix-web-thiserror-derive"

[lib]
name = "actix_web_thiserror_derive"
proc-macro = true

[dependencies]
arc-swap = "1.6.0"
http = "0.2.9"
lazy_static = "1.4.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "1.0.107", features = ["extra-traits"] }
