[package]
name = "actix-web-thiserror"
version = "0.1.0"
authors = ["enzi <enzi@braindead.io>"]
description = "Extend thiserror crate functionality for actix-web."
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4.3.1"
actix-web-thiserror-derive = { path = "../actix-web-thiserror-derive" }
arc-swap = "1.6.0"
http = "0.2.9"
lazy_static = "1.4.0"
serde_json = "1.0.96"
