[package]
name = "actix-web-thiserror"
version = "0.2.0"
authors = ["enzi <enzi@braindead.io>"]
keywords = ["actix", "web", "http", "response", "error"]
description = "Extend thiserror crate functionality for actix-web."
edition = "2021"
license = "MIT"
repository = "https://github.com/enzious/actix-web-thiserror"
include = ["/src", "/README.md", "/LICENSE.md", "/crates-io.md"]
readme = "crates-io.md"
documentation = "https://docs.rs/actix-web-thiserror"

[dependencies]
actix-web = "4.3.1"
actix-web-thiserror-derive = { version = "0.2.0", path = "../actix-web-thiserror-derive" }
arc-swap = "1.6.0"
lazy_static = "1.4.0"
serde_json = "1.0.96"

[dev-dependencies]
log = "0.4.17"
thiserror = "1.0.40"
